--- a/js/photosphere.css
+++ b/js/photosphere.css
@@ -19,7 +19,7 @@
     margin: 0;
     padding: 0;
     position: relative;
-    background: radial-gradient(#fff 0, #fdfdfd 16%, #fbfbfb 33%, #f8f8f8 49%, #efefef 66%, #dfdfdf 82%, #bfbfbf 100%);
+    background: #000;
     overflow: hidden
 }
 
@@ -62,9 +62,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgba(255, 255, 255, .7);
-    width: 150px;
-    height: 150px
+    color: #fff;
+    width: 100px;
+    height: 100px
 }
 
 .psv-loader-canvas {
@@ -73,7 +73,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    color: rgba(61, 61, 61, .5);
+    color: #000;
     z-index: -1
 }
 
