--- a/js/photosphere.css
+++ b/js/photosphere.css
@@ -73,7 +73,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    color: #000;
+    color: transparent;
     z-index: -1
 }
 
@@ -181,7 +181,7 @@
 
 .psv-caption {
     flex: 1 1 100%;
-    color: rgba(255, 255, 255, .7);
+    color: #FFF;
     overflow: hidden;
     text-align: center;
     cursor: unset;
@@ -193,7 +193,8 @@
 .psv-caption-content {
     display: inline-block;
     padding: 10px;
-    white-space: nowrap
+    white-space: nowrap;
+    text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.8);
 }
 
 .psv-zoom-range.psv-button {
@@ -310,7 +311,7 @@
     height: 100%;
     width: 400px;
     max-width: calc(100% - 9px);
-    background: rgba(10, 10, 10, .7);
+    background: rgba(0, 0, 0, .9);
     transform: translate3d(100%, 0, 0);
     opacity: 0;
     transition-property: opacity, transform;
@@ -501,8 +502,8 @@
     z-index: 50;
     box-sizing: border-box;
     max-width: 200px;
-    background: rgba(61, 61, 61, .8);
-    border-radius: 4px;
+    background: #000;
+    border-radius: 0px;
     opacity: 0;
     transition-property: opacity, transform;
     transition-timing-function: ease-in-out;
@@ -513,7 +514,7 @@
 .psv-tooltip-content {
     color: #fff;
     font: 14px sans-serif;
-    text-shadow: 0 1px #000;
+    text-shadow: 0 0px #000;
     padding: .5em 1em
 }
 
@@ -533,7 +534,7 @@
 .psv-tooltip--top-center .psv-tooltip-arrow,
 .psv-tooltip--top-left .psv-tooltip-arrow,
 .psv-tooltip--top-right .psv-tooltip-arrow {
-    border-top-color: rgba(61, 61, 61, .8)
+    border-top-color: rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--bottom-center,
@@ -545,7 +546,7 @@
 .psv-tooltip--bottom-center .psv-tooltip-arrow,
 .psv-tooltip--bottom-left .psv-tooltip-arrow,
 .psv-tooltip--bottom-right .psv-tooltip-arrow {
-    border-bottom-color: rgba(61, 61, 61, .8)
+    border-bottom-color: rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--center-left,
@@ -557,7 +558,7 @@
 .psv-tooltip--center-left .psv-tooltip-arrow,
 .psv-tooltip--left-bottom .psv-tooltip-arrow,
 .psv-tooltip--left-top .psv-tooltip-arrow {
-    border-left-color: rgba(61, 61, 61, .8)
+    border-left-color: rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--center-right,
@@ -569,43 +570,43 @@
 .psv-tooltip--center-right .psv-tooltip-arrow,
 .psv-tooltip--right-bottom .psv-tooltip-arrow,
 .psv-tooltip--right-top .psv-tooltip-arrow {
-    border-right-color: rgba(61, 61, 61, .8)
+    border-right-color: rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--left-top,
 .psv-tooltip--top-left {
-    box-shadow: -3px -3px 0 rgba(90, 90, 90, .7)
+    box-shadow: -3px -3px 0 rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--top-center {
-    box-shadow: 0 -3px 0 rgba(90, 90, 90, .7)
+    box-shadow: 0 -3px 0 rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--right-top,
 .psv-tooltip--top-right {
-    box-shadow: 3px -3px 0 rgba(90, 90, 90, .7)
+    box-shadow: 3px -3px 0 rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--bottom-left,
 .psv-tooltip--left-bottom {
-    box-shadow: -3px 3px 0 rgba(90, 90, 90, .7)
+    box-shadow: -3px 3px 0 rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--bottom-center {
-    box-shadow: 0 3px 0 rgba(90, 90, 90, .7)
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--bottom-right,
 .psv-tooltip--right-bottom {
-    box-shadow: 3px 3px 0 rgba(90, 90, 90, .7)
+    box-shadow: 3px 3px 0 rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--center-left {
-    box-shadow: -3px 0 0 rgba(90, 90, 90, .7)
+    box-shadow: -3px 0 0 rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--center-right {
-    box-shadow: 3px 0 0 rgba(90, 90, 90, .7)
+    box-shadow: 3px 0 0 rgba(0, 0, 0, 1)
 }
 
 .psv-tooltip--visible {
